--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -49,6 +49,7 @@
             {% include "assets/js/client-dayjs.js" %}
             {% include "assets/js/cookie-checker.js" %}
             {% include "assets/js/toggle-menu-button.js" %}
+            {% include "assets/js/dark-mode.js" %}
         {% endset %}
         <script>{{ js | jsMin | safe }}</script>
 
