--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -37,6 +37,11 @@
                 target="_blank"
                 data-test-label="donate-button"
           >{% t 'buttons.donate' %}</a>
+          <li
+              class="nav-link nav-link-flex"
+              id="toggle-dark-mode"
+              data-test-label="dark-mode-button"
+          >{% t 'buttons.toggle-dark-mode' %}</li>
         </div>
 
     </div>
