--- a/src/_includes/partials/site-nav.njk
+++ b/src/_includes/partials/site-nav.njk
@@ -13,7 +13,7 @@
             </button>
             <ul id="menu-dropdown" class="nav-list" aria-labelledby="toggle-button-nav" data-test-label="header-menu">
                 <li>
-                    {% include "partials/search-bar.njk" %}
+                    {# {% include "partials/search-bar.njk" %} #}
                 </li>
                 <li><a
                   class="nav-link nav-link-flex"
