--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -30,9 +30,9 @@
         <link rel="stylesheet" type="text/css" href="{% cacheBuster '/assets/css/search-bar.css' %}" />
 
         {# Algolia search assets #}
-        <script defer src="https://cdn.freecodecamp.org/news-assets/algolia/algoliasearch-3-33-0/algoliasearch.min.js"></script>
-        <script defer src="https://cdn.freecodecamp.org/news-assets/algolia/autocomplete-0-36-0/autocomplete.min.js"></script>
-
+        <script defer src="https://cdn.jsdelivr.net/npm/algoliasearch@5.46.3/dist/lite/builds/browser.umd.js"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/@algolia/autocomplete-js@1.19.4/dist/umd/index.production.min.js"></script>
+        
         {# Day.js and plugins for localization and formatting #}
         <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/dayjs.min.js"></script>
         <script defer src="https://cdn.freecodecamp.org/news-assets/dayjs/1.10.4/localizedFormat.min.js"></script>
@@ -44,7 +44,6 @@
         {% endif %}
 
         {% set js %}
-            {% include "assets/js/algolia-locale-setup.js" %}
             {% include "assets/js/search-bar.js" %}
             {% include "assets/js/client-dayjs.js" %}
             {% include "assets/js/cookie-checker.js" %}
